k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bulk-email
  labels:
    env: dev
    app: bulk-emailer
